# whisperai-playground

./: LICENSE  Makefile  README.md  pyproject.toml  result.srt
src/: gui.py  live_captions.py  mac_notify.py  main.py  record.py
